@@ -160,6 +160,14 @@ void _starpu_task_destroy(struct starpu_task *task)
 		if (task->cl_arg_free)
 			free(task->cl_arg);
 
+		/* Does user want StarPU release callback_arg ? */
+		if (task->callback_arg_free)
+			free(task->callback_arg);
+
+		/* Does user want StarPU release prologue_callback_arg ? */
+		if (task->prologue_callback_arg_free)
+			free(task->prologue_callback_arg);
+
 		free(task);
 	}
 }
